CSS: Fix sidebar overflow, when collapsed

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -143,6 +143,11 @@
 
   &.collapsed {
     width: 3em;
+
+    #menu {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
   }
 }
 
